@@ -263,8 +263,9 @@ object Cli {
     parser.accepts("port", "port or range (31092, 31090..31100). Default - auto").withRequiredArg().ofType(classOf[java.lang.String])
     parser.accepts("bind-address", "broker bind address (broker0, 192.168.50.*, if:eth1). Default - auto").withRequiredArg().ofType(classOf[java.lang.String])
 
-    parser.accepts("options", "broker options or file. Examples:\n log.dirs=/tmp/kafka/$id,num.io.threads=16\n file:server.properties").withRequiredArg()
+    parser.accepts("options", "options or file. Examples:\n log.dirs=/tmp/kafka/$id,num.io.threads=16\n file:server.properties").withRequiredArg()
     parser.accepts("log4j-options", "log4j options or file. Examples:\n log4j.logger.kafka=DEBUG\\, kafkaAppender\n file:log4j.properties").withRequiredArg()
+    parser.accepts("jvm-options", "jvm options string (-Xms128m -XX:PermSize=48m)").withRequiredArg()
     parser.accepts("constraints", "constraints (hostname=like:master,rack=like:1.*). See below.").withRequiredArg()
 
     parser.accepts("failover-delay", "failover delay (10s, 5m, 3h)").withRequiredArg().ofType(classOf[String])
@@ -307,6 +308,7 @@ object Cli {
     val constraints = options.valueOf("constraints").asInstanceOf[String]
     val options_ = options.valueOf("options").asInstanceOf[String]
     val log4jOptions = options.valueOf("log4j-options").asInstanceOf[String]
+    val jvmOptions = options.valueOf("jvm-options").asInstanceOf[String]
 
     val failoverDelay = options.valueOf("failover-delay").asInstanceOf[String]
     val failoverMaxDelay = options.valueOf("failover-max-delay").asInstanceOf[String]
@@ -324,6 +326,7 @@ object Cli {
     if (options_ != null) params.put("options", optionsOrFile(options_))
     if (constraints != null) params.put("constraints", constraints)
     if (log4jOptions != null) params.put("log4jOptions", optionsOrFile(log4jOptions))
+    if (jvmOptions != null) params.put("jvmOptions", jvmOptions)
 
     if (failoverDelay != null) params.put("failoverDelay", failoverDelay)
     if (failoverMaxDelay != null) params.put("failoverMaxDelay", failoverMaxDelay)
@@ -550,6 +553,7 @@ object Cli {
     if (!broker.constraints.isEmpty) printLine("constraints: " + Util.formatMap(broker.constraints), indent)
     if (!broker.options.isEmpty) printLine("options: " + Util.formatMap(broker.options), indent)
     if (!broker.log4jOptions.isEmpty) printLine("log4j-options: " + Util.formatMap(broker.log4jOptions), indent)
+    if (broker.jvmOptions != null) printLine("jvm-options: " + broker.jvmOptions, indent)
 
     var failover = "failover:"
     failover += " delay:" + broker.failover.delay
